--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
 /*  your css code here. If applicable */
+body{
+	background-color:rgb(204,204,204);
+}
+.h1,h2{
+	text-align:center;
+}
+/* h2{
+	width:80%;
+	text-align:center;
+} */
+.list{
+	background-color:white;
+	border:2px solid black;
+	border-radius:5px;
+	padding:30px;
+	list-style-type:none;
+	text-decoration:none;
+}
+
+.player_one{
+	background-color:rgb(255,255,255);
+	padding:5px;
+	width:98%
+	
+}
+.player_two{
+	background-color:rgb(255,255,255);
+	padding:5px;
+	width:98%;
+	
+}
+.playing{
+	
+	background-color:white;
+	border:2px solid black;
+	border-radius:5px;
+	width:80%
+}
