--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,17 @@ body{
 	width:80%;
 	text-align:center;
 } */
+a{
+	text-decoration-line:none;
+	target:_blank;
+}
 .list{
 	background-color:white;
 	border:2px solid black;
 	border-radius:5px;
 	padding:30px;
 	list-style-type:none;
-	text-decoration:none;
+	text-decoration-line:none;
 }
 
 .player_one{
